--- a/k8s_deployment_service.yaml
+++ b/k8s_deployment_service.yaml
@@ -30,6 +30,7 @@ spec:
   - port: 8080
     protocol: TCP
     targetPort: 8080
+    nodePort: 30560
   selector:
     app: devsecops
   type: NodePort
