application startup issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8081
 random.service.url=http://localhost:5000/plusone
 spring.main.allow-circular-references=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
